# Bindery

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SETUP_MCP_SERVER.md  SETUP_ONNX_SERVER.md  eslint.config.js  manifest.json  package-lock.json  package.json
.github/: copilot-instructions.md  dependabot.yml  release-notes-template.md
bindery-core/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
bindery-merge/: package.json  tsconfig.tsbuildinfo  vitest.config.ts
mcp-rust/: .env.example  AGENTS.md  Cargo.toml  README.md  RUST_WALKTHROUGH.md
mcp-rust/src/: config.rs  format.rs  lib.rs  main.rs  merge.rs
mcp-rust/src/docstore/: chunk.rs  discover.rs  mod.rs  read.rs
mcp-rust/src/embeddings/: mod.rs  none.rs  ollama.rs  onnx.rs  provider.rs
mcp-rust/src/index/: lexical.rs  meta.rs  mod.rs  vector.rs
mcp-rust/src/retrieve/: hybrid.rs  mod.rs  normalize.rs
mcp-rust/src/tools/: format.rs  get_chapter.rs  get_notes.rs  get_overview.rs  get_review_text.rs  get_text.rs  health.rs  index_build.rs  index_status.rs  merge.rs  mod.rs  retrieve_context.rs  search.rs  sync_workspace.rs  tasks.rs
mcp-rust/tests/: normalize.rs  tool_end_to_end.rs
mcp-ts/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
mcpb/: README.md  manifest.json  standalone-mcp-README.md
obsidian-plugin/: .eslintrc.json  manifest.json  package.json  tsconfig.eslint.json  tsconfig.json  versions.json  vitest.config.ts
scripts/: check-command-parity.mjs  check-tool-parity.mjs  download_onnx_model.py  onnx_embed_server.py  (+7 more)
(+123 files in other folders)
