[package]
name = "bindery-mcp"
version = "0.2.0"
edition = "2021"
description = "Bindery MCP Server (hybrid retrieval, Ollama/ONNX embeddings, multi-language book export)"
license = "MIT OR Apache-2.0"

[dependencies]
# MCP SDK
rust-mcp-sdk = { version = "0.8", default-features = false, features = ["server", "macros", "stdio"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Env
dotenvy = "0.15.7"

# Errors
anyhow = "1"
thiserror = "1"

# IO + search
walkdir = "2"
regex = "1"
once_cell = "1"

# Indexing
tantivy = "0.22"
hnsw_rs = "0.3"
sha2 = "0.10"
hex = "0.4"

# HTTP embeddings
ureq = { version = "2", features = ["json"] }

# Time + logging
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for task IDs
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
